Delete Validation, AssetBank
Update AssetBank, Delete Validation(user, category, datatype)
